Add support for STRUCT lineage