@@ -16,47 +16,42 @@
 
 package com.google.zetasql.toolkit.tools.lineage;
 
+import com.google.common.collect.ImmutableList;
 import com.google.zetasql.Function;
-import com.google.zetasql.ResolvedFunctionCallInfo;
+import com.google.zetasql.StructType;
 import com.google.zetasql.resolvedast.ResolvedColumn;
-import com.google.zetasql.resolvedast.ResolvedNode;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedAggregateFunctionCall;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedAnalyticFunctionCall;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedCast;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedColumnRef;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedExpr;
-import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedFlatten;
-import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedFlattenedArg;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedFunctionCall;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedFunctionCallBase;
+import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedGetStructField;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedMakeStruct;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedScan;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedSubqueryExpr;
 import com.google.zetasql.resolvedast.ResolvedNodes.ResolvedWithExpr;
 import com.google.zetasql.resolvedast.ResolvedNodes.Visitor;
 import com.google.zetasql.resolvedast.ResolvedSubqueryExprEnums.SubqueryType;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.function.BiConsumer;
+import java.util.Stack;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
- * Implements extracting the output columns from a {@link ResolvedExpr}.
+ * Implements finding the direct {@link ResolvedColumn} parent of a {@link ResolvedExpr}.
  */
-class OutputColumnExtractor extends Visitor {
-
-  private final ArrayList<ResolvedColumn> result = new ArrayList<>();
-
-  public static List<ResolvedColumn> fromExpression(ResolvedExpr expression) {
-    OutputColumnExtractor extractor = new OutputColumnExtractor();
+class ExpressionParentFinder extends Visitor {
+  private final Stack<ResolvedColumn> result = new Stack<>();
+  public static List<ResolvedColumn> findDirectParentsForExpression(ResolvedExpr expression) {
+    ExpressionParentFinder extractor = new ExpressionParentFinder();
     expression.accept(extractor);
     return extractor.result;
   }
 
   public void visit(ResolvedColumnRef columnRef) {
-    result.add(columnRef.getColumn());
+    result.push(columnRef.getColumn());
   }
 
   public void visit(ResolvedWithExpr withExpr) {
@@ -64,11 +59,11 @@ class OutputColumnExtractor extends Visitor {
   }
 
   public void visit(ResolvedSubqueryExpr subqueryExpr) {
-    List<SubqueryType> scalarOrArray = List.of(SubqueryType.SCALAR, SubqueryType.ARRAY);
+    List<SubqueryType> scalarOrArray = ImmutableList.of(SubqueryType.SCALAR, SubqueryType.ARRAY);
     if (scalarOrArray.contains(subqueryExpr.getSubqueryType())) {
       ResolvedScan subquery = subqueryExpr.getSubquery();
       ResolvedColumn subqueryOutputColumn = subquery.getColumnList().get(0);
-      result.add(subqueryOutputColumn);
+      result.push(subqueryOutputColumn);
     }
   }
 
@@ -101,7 +96,7 @@ class OutputColumnExtractor extends Visitor {
         break;
       case "nullif":
         // Keep only the first argument (the value)
-        expressionsToVisit = List.of(arguments.get(0));
+        expressionsToVisit = ImmutableList.of(arguments.get(0));
         break;
       default:
         expressionsToVisit = arguments;
@@ -126,10 +121,47 @@ class OutputColumnExtractor extends Visitor {
     makeStruct.getFieldList().forEach(fieldExpr -> fieldExpr.accept(this));
   }
 
+  public void visit(ResolvedGetStructField getStructField) {
+    ResolvedExpr structExpression = getStructField.getExpr();
+    StructType structExpressionType = structExpression.getType().asStruct();
+    int accessedFieldIndex = (int) getStructField.getFieldIdx();
+    String accessedFieldName = structExpressionType.getField(accessedFieldIndex).getName();
+
+    if (structExpression instanceof ResolvedMakeStruct) {
+      // If the user made a STRUCT and immediately accessed a field in it, only consider the parent
+      // columns of the corresponding field.
+      ResolvedMakeStruct makeStructExpression = (ResolvedMakeStruct) structExpression;
+      StructType makeStructExpressionType = makeStructExpression.getType().asStruct();
+      int numberOfFields = makeStructExpressionType.getFieldCount();
+
+      int fieldIndex = IntStream.range(0, numberOfFields)
+          .filter(index ->
+              makeStructExpressionType.getField(index).getName().equals(accessedFieldName))
+          .findFirst()
+          .orElseThrow(() -> new IllegalArgumentException(
+              "Field " + accessedFieldName + " does not exist in STRUCT of type: "
+                  + makeStructExpressionType));
+      ResolvedExpr fieldExpression = makeStructExpression.getFieldList().get(fieldIndex);
+
+      List<ResolvedColumn> parentColumns = ExpressionParentFinder.findDirectParentsForExpression(fieldExpression);
+      parentColumns.forEach(result::push);
+    } else {
+      structExpression.accept(this);
+
+      ResolvedColumn structColumn = result.pop();
+      ResolvedColumn parentColumn = new ResolvedColumn(
+          structColumn.getId(),
+          structColumn.getTableName(),
+          structColumn.getName() + "." + accessedFieldName,
+          getStructField.getType());
+      this.result.push(parentColumn);
+    }
+  }
+
   public void visit(ResolvedCast cast) {
     cast.getExpr().accept(this);
   }
 
-  private OutputColumnExtractor() {}
+  private ExpressionParentFinder() {}
 
 }
